--- a/front/my-app/package.json
+++ b/front/my-app/package.json
@@ -16,8 +16,9 @@
     "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
+  
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts  start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
